--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -1,58 +1,291 @@
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <style type="text/css">
+        h4{
+            margin: 0;
+            padding-top: 30px;
+            font-size: 40px;
+        }
 
-<section data-ng-controller="EventsController">
-    <h1>
-        {{eventD}}
-    </h1>
+        .item{
+            text-align: center;
+            height: 300px;
+            width: 400px;
+            border-color: red;
+        }
+        .carousel{
+            border-radius: 65px 65px 65px 65px;
+            overflow: hidden;
+            margin-top: 20px;
+            width: 380px;
+            border-color: red;
 
-    <div class="form-group">
-        <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
-                type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">update</font></button>
+        }
+        .bs-example{
+            margin: 20px;
+        }
+        .carousel-control {
+            background:transparent;
+            overflow: hidden;
+            font-size: 10px;
+            border-color: red;
+        }
+        .carousel .item {
+            border-radius: 65px 65px 65px 65px;
+        }
+        .carousel .item img {
+            border-radius: 65px 65px 65px 65px;
+        }
+        table.strapless{
+            max-width: 30%;
+        }
+    </style>
+</head>>
+
+<section data-ng-controller="EventDetailsController">
+    <div>
+        <div class="pull-right">
+            <button style="background-color:white; padding: 0px; border-width:2px; border-color:red; height:30px; width:80px;"
+                    type="submit" class="btn btn-small btn-block btn"><font face="impact" size="2">update</font></button>
+            <div style="padding:4px"></div>
+            <button style="background-color:white; padding: 0px; border-width:2px; border-color:red; height:30px; width:80px;"
+                    type="submit" class="btn btn-small btn-block btn"><font face="impact" size="2">cancel</font></button>
+        </div>
+
+        <div style="padding-left:50%">
+            <table>
+                <tbody>
+                <tr><td style="text-align:center"><font face="impact" size="8"> {{track.name}} </font></td></tr>
+                <tr><td style="text-align:center"><font face="impact" size="4"> date </font></td></tr>
+                <tr><td style="text-align:center"><font face="impact" size="2"> locations </font></td></tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="form-group">
-        <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
-                type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">cancel</font></button>
-    </div>
-    <div class="form-group">
+
+        <div class="row">
+            <div class="col-md-4 ">
+                    <div id="imageCarousel" class="carousel slide" data-interval="4000" data-ride="carousel">
+                        <!-- Carousel indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#iamgeCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#imageCarousel" data-slide-to="1"></li>
+                            <li data-target="#imageCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <!-- Carousel items -->
+                        <div class="carousel-inner">
+                            <div class="active item">
+                                <h4><img src="http://drewphillipsphotography.com/blog/wp-content/uploads/2012/05/alms-laguna-seca-2012.jpg" width="300" height="200"/></h4>
+                            </div>
+                            <div class="item">
+                                <h4><img src="http://www.rfactorcentral.com/screenshots/lge/11-LagunaSeca-9759.jpg" width="300" height="200"/></h4>
+                            </div>
+                            <div class="item">
+                                <h4><img src="http://www.rfactorcentral.com/screenshots/lge/11-LagunaSeca-9759.jpg" width="300" height="200"/></h4>
+                            </div>
+                        </div>
+                        <!-- Carousel nav -->
+                        <a class="carousel-control" href="#imageCarousel" data-slide="prev" >
+                            <span class="glyphicon glyphicon-chevron-left" style="width:10px"></span>
+                        </a>
+                        <a class="carousel-control" href="#imageCarousel" data-slide="next" >
+                            <span class="glyphicon glyphicon-chevron-right" style="width:10px"></span>
+                        </a>
+                    </div>
+            </div>
+            <div class="col-sm-2 col-md-offset-1">
+                <div ><br/><br/> <br/></div>
+                <span style="font-family: impact; width: 500px; display:block;">
+                this is the greatested sdsdflksdjflksd fasldkfsdl;kf jsad;lfjasdf;lkajsf;lksada sl;dksadlkfj
+                sdfaljjjjjjjjjjjjjj jjjjjjjjjjjj jjjjjjjj jjfjlasdkfjasd lkfjsdalfks djflkaaaaa aaaaaaaaa aaaaa
+                </span>
+                <div class="form-group pull-right ">
+                    <div ><br/><br/> </div>
+                    <div class="panel panel-default">
+                    <div class="panel-title table-title">past events</div>
+                    <table class="table table-striped table-bordered table-condensed" width="300" >
+                        <thead>
+                        <tr>
+                            <th>date</th>
+                            <th>gallery</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr data-ng-repeat="event in events | filter: searchText">
+                            <!--<td>{{event.eventStartDate}}</td>-->
+                            <td>{{event.date}}</td>
+                            <td>{{event.track}}</td>
+                            <td>{{event.location}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+
+        </div>
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
         <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
                 type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">track day calculator</font></button>
     </div>
-    <div>
-        <table ng-table="tableParams" class="table">
-            <tr ng-model="eventer" ng-repeat="attendees in manifests">
-                <td data-title="'Event'" sortable="'event'">{{eventer.eventName}}</td>
-                <td data-title="'Date'" sortable="'date'">{{eventer.eventDate}}</td>
-                <td data-title="'State'" sortable="'state'">{{eventer.eventState}}</td>
-                <td data-title="'Event Status'" sortable="'status'">{{eventer.eventStatus}}</td>
-                <td data-title="'Cost'" sortable="'cost'">{{eventer.eventCost}}</td>
-                <td><form><button ng-submit="filterEvents()" type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">track day calculator</font></button></td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table ng-table="tableParams" class="table">
-            <tr ng-model="log" ng-repeat="log in logs">
-                <td data-title="''" >{{log.comment}}</td>
-
-            </tr>
-        </table>
+    <div class="col-md-4 col-centered">
     </div>
 
-    <div class="container" ng-controller="AccordionCtrl">
-        <img class="center-block" src="/system/assets/img/logo.jpg" width="400" height="175" />
-        <label class="checkbox">
-            <input type="checkbox" ng-model="oneAtATime">
-            Open only one at a time
-        </label>
-        <accordion close-others="oneAtATime">
-            <accordion-group ng-repeat="group in groups" is-open="group.expanded">
-                <accordion-heading>
-                    <span class="glyphicon pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
-                    <span class="pull-left glyphicon-asterisk glyphicon-space"></span>
-                    <strong class="valign-middle">{{group.title}}</strong>
-                    <!--<span class="glyphicon glyphicon-remove-circle pull-right" style="color: red" ng-click="removeGroup(group)"></span>-->
-                </accordion-heading>
-                {{group.content}}
-            </accordion-group>
-        </accordion>
+</div>
+    <div class="row"><div><br/><div></div></div>
+    <div class="row">
+        <div class="col-md-4 "><span style="font-family:impact"><h2>attendees</h2></span> </div>
+        <div class="col-md-4 col-md-offset-1">
+            <div class="table-search pull-right">
+                <div class="form-group input-group">
+                <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-search"></i>
+                </span>
+                    <input ng-model="searchText" type="search" class="text-right form-control glowing-border no-validate" placeholder="Search Antendees"/></div>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="eventAttendees">
+        <div class="panel panel-default">
+            <div class="panel-heading table-title-bg">
+                <div class="panel-title table-title">advanced <a href="#!/events/register"><span class="glyphicon"><button style="background-color:white; border-width:2px; border-color:red; height:40px; width:90px;"
+
+                                                                                                                          type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">attend</font></button></span></a></div>
+            </div>
+
+            <table class="table table-hover table-bordered">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Vehicle</th>
+                    <th>Wants Ride Along</th>
+                    <th>Allows Ride Alongs</th>
+                    <th>Checked-in</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr data-ng-repeat="attendee in attendees | filter: searchText">
+                    <!--<td>{{event.eventStartDate}}</td>-->
+                    <td>{{user.firstName}}</td>
+                    <td>{{vehicle.desc}}</td>
+                    <td>{{user.rideAlong}}</td>
+                    <td>{{event.riders}}</td>
+                    <td><button class="btn btn-default center-block">attend</button></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+    <div>
+        <table class="table table-hover table-striped">
+            <thead>
+            <tr>
+                <th>Date</th>
+                <th>Track</th>
+                <th>Location</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-ng-repeat="event in events | filter: searchText">
+                <!--<td>{{event.eventStartDate}}</td>-->
+                <td>{{event.date}}</td>
+                <td>{{event.track}}</td>
+                <td>{{event.location}}</td>
+            </tr>
+            </tbody>
+        </table>
+
+    </div>
+<div class="container" id="forumLogs">
+        <div class="panel panel-default"">
+            <div class="panel-heading table-title-bg">
+                <div class="panel-title table-title">forum log <a href="#!/forumlogs/create"><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
+            </div>
+
+            <table class="table table-hover table-bordered">
+                <thead>
+                <tr>
+                    <th>{forumlog.link}}}</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr data-ng-repeat="elog in forumLog ">
+                    <!--<td>{{event.eventStartDate}}</td>-->
+                    <td>{{event.date}}</td>
+                    <td>{{event.track}}</td>
+                    <td>{{event.location}}</td>
+                    <td>{{event.novice}} :: {{event.intermediate}} :: {{event.advanced}}</td>
+                    <td>{{event.price | currency}}</td>
+                    <td><button class="btn btn-default center-block">attend</button></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+</div>
+
+        <div class="container" ng-controller="AccordionCtrl">
+            <accordion close-others="oneAtATime">
+                <accordion-group ng-repeat="group in groups" is-open="group.expanded">
+                    <accordion-heading>
+                        <span class="glyphicon pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
+                        <span class="pull-left glyphicon-asterisk glyphicon-space"></span>
+                        <strong class="valign-middle">{{group.title}}</strong>
+                        <!--<span class="glyphicon glyphicon-remove-circle pull-right" style="color: red" ng-click="removeGroup(group)"></span>-->
+                    </accordion-heading>
+                    {{group.content}}
+                </accordion-group>
+            </accordion>
+        </div>
+
+        <!--
+            <div class="form-group">
+                <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
+                        type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">track day calculator</font></button>
+            </div>
+            <div>
+                <table ng-table="tableParams" class="table">
+                    <tr ng-model="eventer" ng-repeat="attendees in manifests">
+                        <td data-title="'Event'" sortable="'event'">{{eventer.eventName}}</td>
+                        <td data-title="'Date'" sortable="'date'">{{eventer.eventDate}}</td>
+                        <td data-title="'State'" sortable="'state'">{{eventer.eventState}}</td>
+                        <td data-title="'Event Status'" sortable="'status'">{{eventer.eventStatus}}</td>
+                        <td data-title="'Cost'" sortable="'cost'">{{eventer.eventCost}}</td>
+                        <td><form><button ng-submit="filterEvents()" type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">track day calculator</font></button></td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table ng-table="tableParams" class="table">
+                    <tr ng-model="log" ng-repeat="log in logs">
+                        <td data-title="''" >{{log.comment}}</td>
+
+                    </tr>
+                </table>
+            </div>-->
+
+        <div class="container" ng-controller="AccordionCtrl">
+            <img class="center-block" src="/system/assets/img/logo.jpg" width="400" height="175" />
+            <label class="checkbox">
+                <input type="checkbox" ng-model="oneAtATime">
+                Open only one at a time
+            </label>
+            <accordion close-others="oneAtATime">
+                <accordion-group ng-repeat="group in groups" is-open="group.expanded">
+                    <accordion-heading>
+                        <span class="glyphicon pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
+                        <span class="pull-left glyphicon-asterisk glyphicon-space"></span>
+                        <strong class="valign-middle">{{group.title}}</strong>
+                        <!--<span class="glyphicon glyphicon-remove-circle pull-right" style="color: red" ng-click="removeGroup(group)"></span>-->
+                    </accordion-heading>
+                    {{group.content}}
+                </accordion-group>
+            </accordion>
     </div>
 </section>
