--- a/packages/custom/events/public/views/create.html
+++ b/packages/custom/events/public/views/create.html
@@ -1,124 +1,98 @@
 <section data-ng-controller="EventsController">
   <p class="page-title">create a new event</p>
 
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    Launch demo modal
-  </button>
-
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <form style="float:none; left:25%" name="eventForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(eventForm.$valid)" novalidate>
 
-   <!-- <div data-ng-controller="TracksController" class="form-group" ng-class="{ 'has-error' : submitted && articleForm.track.value == null }">
-      <label class="col-md-3 control-label">Track</label>
+    <div data-ng-controller="TracksController" data-ng-init="findAll()" class="form-group" ng-class="{ 'has-error' : submitted && eventForm.t.value == null }">
+      <label for="t" class="col-md-3 control-label">Track</label>
       <div class="col-md-7">
-        <select id="track" class="form-control glowing-border" data-ng-model="track" name="track">
-          <option style="color:gray" value="" selected>Select a track
-          <div ng-repeat="track in tracks">
-            <option value="{{track.name}}">{{track.name}}
-          </div>
+        <select id="t" class="form-control glowing-border" name="t">
+          <option style="color:gray" value="" selected>Select a track</option>
+          <option data-ng-repeat="track in tracks" value="{{track.trackName}}">{{track.trackName}}</option>
         </select>
       </div>
-    </div>-->
+    </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.date.$invalid }">
-      <label for="eventStartDate" class="col-md-3 control-label">Date</label>
+      <label for="date" class="col-md-3 control-label">Date</label>
       <div class="col-md-4">
-        <input name="eventStartDate" type="date" data-ng-model="eventStartDate" id="eventStartDate" placeholder="mm/dd/yyyy" class="form-control glowing-border" required>
+        <input name="date" type="date" id="date" placeholder="mm/dd/yyyy" class="form-control glowing-border" required>
       </div>
     </div>
-<!--
-    <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.price.$invalid }">
-      <label for="price" class="col-md-3 control-label">Price</label>
-      <div class="col-md-3">
-        <input name="price" type="number" data-ng-model="price" id="price" min="0" placeholder="Price" class="form-control glowing-border" required>
-      </div>
-    </div>
+    <!--
+        <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.price.$invalid }">
+          <label for="price" class="col-md-3 control-label">Price</label>
+          <div class="col-md-3">
+            <input name="price" type="number" data-ng-model="price" id="price" min="0" placeholder="Price" class="form-control glowing-border" required>
+          </div>
+        </div>
 
-    <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.city.$invalid }">
-      <label for="city" class="col-md-3 control-label">City</label>
-      <div class="col-md-5">
-        <input name="city" type="text" data-ng-model="city" id="city" placeholder="City" class="form-control glowing-border" required>
-      </div>
-    </div>
+        <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.city.$invalid }">
+          <label for="city" class="col-md-3 control-label">City</label>
+          <div class="col-md-5">
+            <input name="city" type="text" data-ng-model="city" id="city" placeholder="City" class="form-control glowing-border" required>
+          </div>
+        </div>
 
-    <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.state.value == null }">
-      <label for="state" class="col-md-3 control-label">State</label>
-      <div class="col-md-5">
-        <select id="state" class="form-control glowing-border" data-ng-model="state" name="state">
-          <option style="color:gray" value="" selected>Select a state
-          <option value="AL">Alabama
-          <option value="AK">Alaska
-          <option value="AZ">Arizona
-          <option value="AR">Arkansas
-          <option value="CA">California
-          <option value="CO">Colorado
-          <option value="CT">Connecticut
-          <option value="DE">Delaware
-          <option value="FL">Florida
-          <option value="GA">Georgia
-          <option value="HI">Hawaii
-          <option value="ID">Idaho
-          <option value="IL">Illinois
-          <option value="IN">Indiana
-          <option value="IA">Iowa
-          <option value="KS">Kansas
-          <option value="KY">Kentucky
-          <option value="LA">Louisiana
-          <option value="ME">Maine
-          <option value="MD">Maryland
-          <option value="MA">Massachusetts
-          <option value="MI">Michigan
-          <option value="MN">Minnesota
-          <option value="MS">Mississippi
-          <option value="MO">Missouri
-          <option value="MT">Montana
-          <option value="NE">Nebraska
-          <option value="NV">Nevada
-          <option value="NH">New Hampshire
-          <option value="NJ">New Jersey
-          <option value="NM">New Mexico
-          <option value="NY">New York
-          <option value="NC">North Carolina
-          <option value="ND">North Dakota
-          <option value="OH">Ohio
-          <option value="OK">Oklahoma
-          <option value="OR">Oregon
-          <option value="PA">Pennsylvania
-          <option value="RI">Rhode Island
-          <option value="SC">South Carolina
-          <option value="SD">South Dakota
-          <option value="TN">Tennessee
-          <option value="TX">Texas
-          <option value="UT">Utah
-          <option value="VT">Vermont
-          <option value="VA">Virginia
-          <option value="WA">Washington
-          <option value="DC">Washington D.C.
-          <option value="WV">West Virginia
-          <option value="WI">Wisconsin
-          <option value="WY">Wyoming
-        </SELECT>-->
-        <!--<input name="state" type="text" data-ng-model="state" id="state" placeholder="State" class="form-control glowing-border" required>-->
-     <!-- </div>
+        <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.state.value == null }">
+          <label for="state" class="col-md-3 control-label">State</label>
+          <div class="col-md-5">
+            <select id="state" class="form-control glowing-border" data-ng-model="state" name="state">
+              <option style="color:gray" value="" selected>Select a state
+              <option value="AL">Alabama
+              <option value="AK">Alaska
+              <option value="AZ">Arizona
+              <option value="AR">Arkansas
+              <option value="CA">California
+              <option value="CO">Colorado
+              <option value="CT">Connecticut
+              <option value="DE">Delaware
+              <option value="FL">Florida
+              <option value="GA">Georgia
+              <option value="HI">Hawaii
+              <option value="ID">Idaho
+              <option value="IL">Illinois
+              <option value="IN">Indiana
+              <option value="IA">Iowa
+              <option value="KS">Kansas
+              <option value="KY">Kentucky
+              <option value="LA">Louisiana
+              <option value="ME">Maine
+              <option value="MD">Maryland
+              <option value="MA">Massachusetts
+              <option value="MI">Michigan
+              <option value="MN">Minnesota
+              <option value="MS">Mississippi
+              <option value="MO">Missouri
+              <option value="MT">Montana
+              <option value="NE">Nebraska
+              <option value="NV">Nevada
+              <option value="NH">New Hampshire
+              <option value="NJ">New Jersey
+              <option value="NM">New Mexico
+              <option value="NY">New York
+              <option value="NC">North Carolina
+              <option value="ND">North Dakota
+              <option value="OH">Ohio
+              <option value="OK">Oklahoma
+              <option value="OR">Oregon
+              <option value="PA">Pennsylvania
+              <option value="RI">Rhode Island
+              <option value="SC">South Carolina
+              <option value="SD">South Dakota
+              <option value="TN">Tennessee
+              <option value="TX">Texas
+              <option value="UT">Utah
+              <option value="VT">Vermont
+              <option value="VA">Virginia
+              <option value="WA">Washington
+              <option value="DC">Washington D.C.
+              <option value="WV">West Virginia
+              <option value="WI">Wisconsin
+              <option value="WY">Wyoming
+            </SELECT>
+      </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.novice.$invalid }">
