--- a/packages/custom/events/public/views/upcoming.html
+++ b/packages/custom/events/public/views/upcoming.html
@@ -11,10 +11,10 @@
         <div class="panel-title table-title">upcoming events <a href="#!/events/create"><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
     </div>
 
-    <table class="table table-hover table-striped">
+    <table style="height: 400px" class="table table-hover table-striped table-bordered" fixed-header>
         <thead>
         <tr>
-            <th>Date</th>
+            <th >Date</th>
             <th>Track</th>
             <th>Location</th>
             <th>Spots Remaining<br><small>(Novice :: Intermediate :: Advanced)</small></th>
@@ -33,4 +33,5 @@
         </tr>
         </tbody>
     </table>
+
 </div>
