--- a/packages/custom/events/public/views/register.html
+++ b/packages/custom/events/public/views/register.html
@@ -6,15 +6,15 @@
         <div class="modal-body">
             <form name="registerForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(registerForm.$valid)" action="https://www.paypal.com/cgi-bin/webscr" method="post" novalidate>
             <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.skill.$invalid }">
-                <label mean-token="'register-skill'" for="skill" class="col-md-3 control-label">Skill</label>
+                <label mean-token="'register-skill'" for="skillClass" class="col-md-3 control-label">Skill</label>
                 <div class="col-md-9">
-                    <select name="skill" data-ng-model="skill" id="skill" class="form-control" required>
-                        <option value="Novice">Novice</option>
-                        <option value="Intermediate">Intermediate</option>
-                        <option value="Advanced">Advanced</option>
+                    <select name="skillClass" data-ng-model="skillClass" id="skillClass" class="form-control" required>
+                        <option value="novice">Novice</option>
+                        <option value="intermediate">Intermediate</option>
+                        <option value="idvanced">Advanced</option>
                     </select>
-                    <div data-ng-show="submitted && registerForm.skill.$invalid" class="help-block">
-                        <p data-ng-show="registerForm.skill.$error.required">Skill is required</p>
+                    <div data-ng-show="submitted && registerForm.skillClass.$invalid" class="help-block">
+                        <p data-ng-show="registerForm.skillClass.$error.required">Skill is required</p>
                     </div>
                 </div>
             </div>
@@ -30,12 +30,12 @@
                     </div>
                 </div>
             </div>
-                <input type="checkbox" name="giveRideAlongs" value="giveRideAlongs">Ride alongs welcome!<br>
-                <input type="checkbox" name="requestRideAlongs" value="requestRideAlongs">Request to ride along<br>
+                <input type="checkbox" data-ng-model="giveRideAlongs" name="giveRideAlongs" value="giveRideAlongs">Ride alongs welcome!<br>
+                <input type="checkbox" data-ng-model="requestRideAlongs" name="requestRideAlongs" value="requestRideAlongs">Request to ride along<br>
             </form>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" data-ng-click="ok()"><img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="left" style="margin-right:7px;"></button>
+            <button class="btn btn-primary" data-ng-click="ok('paypal')"><img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="left" style="margin-right:7px;"></button>
             <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
         </div>
     <!--</script>-->
