--- a/packages/custom/events/public/assets/css/events.css
+++ b/packages/custom/events/public/assets/css/events.css
@@ -56,48 +56,9 @@
 
 
 /* carosel css */
-.item {
-  text-align: center;
-  height: 300px;
+.slides-control {
   width: 400px;
-  border-color: red;
 }
-.carousel{
-  border-radius: 65px 65px 65px 65px;
-  overflow: hidden;
-  width: 380px;
-  border-color: red;
-
-}
-.bs-example{
-  margin: 20px;
-}
-.carousel-control {
-  background:transparent;
-  overflow: hidden;
-  font-size: 10px;
-  border-color: red;
-}
-.carousel .item {
-  border-radius: 65px 65px 65px 65px;
-}
-.carousel .item img {
-  border-radius: 65px 65px 65px 65px;
-}
-table.strapless{
-  max-width: 30%;
-}
-.panel-body{
-  padding : 0;
-}
-
-.slides_control > div{
-  height: 200px;
-}
-.slides_control {
-  position:absolute;
-  width: 400px;
-  left:50%;
-  top:20px;
-  margin-left:-200px;
+.size-static {
+  height: 225px;
 }
