--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -1,10 +1,10 @@
-<section style="background-color: orangered" data-ng-controller="EventDetailsController">
+<section data-ng-controller="EventDetailsController">
     <h1>{{event.trackId.trackName}}</h1>
     <h2>{{event.eventStartDate | date : "MM/dd/yyyy"}}</h2>
     <h3>{{event.trackId.trackAddress}}</h3>
     <h3>{{event.trackId.trackCity}}, {{event.trackId.trackState}} {{event.trackId.trackZip}}</h3>
 
-    <div style="background-color: red;" class="pull-right">
+    <div class="pull-right">
         <div style="padding: 3px">
             <button type="submit" class="btn btn-default">update</button>
         </div>
@@ -12,7 +12,7 @@
             <button type="submit" class="btn btn-default">cancel</button>
         </div>
 
-        <div style="background-color: orange; padding: 3px" class="btn-group share-group">
+        <div style="padding: 3px" class="btn-group share-group">
             <a data-toggle="dropdown" class="btn btn-info">
                 <i class="fa fa-share-alt fa-inverse"></i>
             </a>
@@ -39,56 +39,15 @@
         </div>
     </div>
 
-
-        <div ng-controller="CarouselCtrl" class="slides_control">
-            <div>
-                <carousel interval="myInterval">
-                    <slide ng-repeat="slide in slides" active="slide.active">
-                        <img width="300" height="200" ng-src="{{slide.image}}">
-                    </slide>
-                </carousel>
-            </div>
-        </div>
-
-
-
-
-
-    <div style="background-color: black" class="">
-        <div id="imageCarousel" class="carousel slide" data-interval="4000" data-ride="carousel">
-            <!-- Carousel indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#imageCarousel" data-slide-to="1"></li>
-                <li data-target="#imageCarousel" data-slide-to="2"></li>
-            </ol>
-            <!-- Carousel items -->
-            <div class="carousel-inner">
-                <div class="active item">
-                    <img src="http://drewphillipsphotography.com/blog/wp-content/uploads/2012/05/alms-laguna-seca-2012.jpg" width="300" height="200"/>
-                </div>
-                <div class="item">
-                    <img src="http://www.rfactorcentral.com/screenshots/lge/11-LagunaSeca-9759.jpg" width="300" height="200"/>
-                </div>
-                <div class="item">
-                    <img src="http://www.rfactorcentral.com/screenshots/lge/11-LagunaSeca-9759.jpg" width="300" height="200"/>
-                </div>
-            </div>
-            <!-- Carousel nav -->
-
-            <a class="carousel-control" href="#imageCarousel" data-slide="prev" >
-                <i class="glyphicon glyphicon-chevron-left" style="width:10px"></i>
-            </a>
-
-            <a class="carousel-control" href="#imageCarousel" data-slide="next" >
-                <i class="glyphicon glyphicon-chevron-right" style="width:10px"></i>
-            </a>
-
+    <div ng-controller="CarouselCtrl" style="position: relative;" class="pull-left">
+        <div class="slides-control">
+            <carousel interval="myInterval">
+                <slide ng-repeat="slide in slides" active="slide.active">
+                    <img ng-src="{{slide.image}}"/>
+                </slide>
+            </carousel>
         </div>
     </div>
-
-
-
 
 <!--<div style="background-color: green" data-ng-controller="ModalRegisteredController" data-ng-init="open()">
             <div class="col-sm-2 col-md-offset-1">
